--- a/src/components/DynamicHeader.module.css
+++ b/src/components/DynamicHeader.module.css
@@ -8,6 +8,8 @@
     justify-content: space-between;
     padding: 0 47px 0 64px;
     background-color: var(--slateDarkGray);
+
+    z-index: 20;
 }
 .shipping{
     color: white;
