--- a/src/components/FixedHeader.module.css
+++ b/src/components/FixedHeader.module.css
@@ -8,6 +8,8 @@
     justify-content: space-between;
     padding: 0 47px 4px 64px;
     align-items: center;
+
+    z-index: 2;
 }
 .logo{
     margin-top: .2em;
