--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -12,13 +12,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 100vh;
   width: 100%;
+  padding-right: 16px;
   z-index: 1;
   pointer-events: none;
 }
 .heroContainer{
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   height: 100%;
   width: 100%;
@@ -28,6 +29,7 @@
   object-fit: cover;
   height: 100%;
   width: 100%;
+  min-height: 100vh;
 }
 .intro{
   display: flex;
