--- a/src/components/HeaderWrapper.module.css
+++ b/src/components/HeaderWrapper.module.css
@@ -1,9 +1,10 @@
 .wrapper{
-    position: sticky;
+    position: fixed;
     top: 0;
     left: 0;
+    width: 100svw;
+    max-width: 100vw;
+    z-index: 40;
 
-    z-index: 1;
-
-    transition: transform 0.15s ease-out;
+    transition: transform 0.2s cubic-bezier(.645,.045,.355,1);
 }
