--- a/src/components/DynamicHeader.module.css
+++ b/src/components/DynamicHeader.module.css
@@ -1,7 +1,7 @@
 .container {
-    position: sticky;
+    /* position: sticky;
     top: 0;
-    left: 0;
+    left: 0; */
     display: flex;
     height: 48px;
     align-items: center;
