--- a/src/components/MainCarousel.module.css
+++ b/src/components/MainCarousel.module.css
@@ -4,6 +4,7 @@
     width: 100%;
     max-width: 1680px;
     padding: 64px;
+    margin: auto;
 }
 .carousel{
     width: 100%;
@@ -38,15 +39,22 @@
 .rowContent{
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    padding: 40px;
+    flex: 0 0 40%;
+    width: 40%;
 }
 .shop{
     all: unset;
+    display: table;
     border: 1px solid black;
     background-color: white;
     color: black;
-    padding: 10px 36px 10px 36px;
+    min-width: 202px;
+    height: 38px;
+    text-align: center;
+    margin-right: auto;
     cursor: pointer;
+    font-family: var(--themeFontMd);
 }
 .shop:hover{
     background-color: black;
@@ -73,9 +81,30 @@
 .prev:hover,.next:hover{
     background: black;
 }
-.buttonSvg{
 
-}
 .buttonSvgRight{
     transform: rotate(180deg);
+}
+.contentHeader{
+    font-family: var(--themeFontBold);
+    font-weight: 400;
+    text-transform: uppercase;
+    line-height: 148%;
+    font-size: 16px;
+    margin-bottom: 24px;
+    letter-spacing: 0.1em;
+}
+.contentTitle{
+    margin-bottom: 40px;
+    font-size: 48px;
+    line-height: 116%;
+    -webkit-font-smoothing: antialiased;
+    font-family: var(--themeFontBold);
+    font-weight: 400;
+}
+.contentText{
+    margin-bottom: 24px;
+    display: block;
+    line-height: 148%;
+    font-size: 16px;
 }
