--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -80,3 +80,9 @@
   color: white;
   outline: 1px solid black;
 }
+.quoteCarouselWrapper{
+  width: 100%;
+  margin: auto;
+  max-width: 1680px;
+  padding: 64px;
+}
