--- a/src/components/FixedHeader.module.css
+++ b/src/components/FixedHeader.module.css
@@ -9,6 +9,7 @@
     padding: 0 64px 4px 64px;
     align-items: center;
 
+    /* transition: background-color .2s cubic-bezier(.645,.045,.355,1); */
     z-index: 2;
 }
 .logo{
