--- a/src/components/ImageGrid.module.css
+++ b/src/components/ImageGrid.module.css
@@ -2,6 +2,8 @@
     width: 100%;
     margin: auto;
     max-width: 1680px;
+
+    transition: opacity .2s cubic-bezier(.645,.045,.355,1);
 }
 .imageList{
     margin: 0;
