--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,3 +122,32 @@ input[type="checkbox"]:checked{
     opacity: 1;
   }
 }
+.inline{
+  display: flex;
+}
+footer nav a{
+    display: table;
+    opacity: .8;
+    margin-bottom: 0.5rem;
+    font-family: var(--themeFontRoman);
+    font-size: 16px;
+    line-height: 148%;
+    color: #fff;
+    background-color: transparent;
+    cursor: pointer;
+    font-weight: 400;
+}
+footer nav a:hover{
+  opacity: 1;
+}
+footer nav ul{
+  list-style: none;
+}
+footer nav.inline a:hover svg>path{
+  opacity: 1;
+  fill: white;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+footer nav.inline{
+  margin-bottom: 64px;
+}
