--- a/src/components/QuoteCarousel.module.css
+++ b/src/components/QuoteCarousel.module.css
@@ -12,9 +12,10 @@
     /* flex-wrap: wrap; */
     /* margin: 0 -24px; */
     padding: 0 24px 48px;
+    margin-top: 52px;
 }
 .blockquote{
-    margin-bottom: 40px;
+    margin-bottom: 18px;
     font-size: 36px;
     text-align: center;
     line-height: 156%;
